# sn-agent

./: .gitignore  README.md  pyproject.toml
data/: games.csv  ground_truth.json
data/Dataset/2016-08-20 - 19-30 Leicester 0 - 0 Arsenal/: 1_asr.txt
data/Dataset/2016-08-27 - 14-30 Tottenham 1 - 1 Liverpool/: 2_asr.txt
data/Dataset_complete/2016-08-14 - Arsenal 3 - 4 Liverpool/: 1_asr.txt  2_asr.txt  n_consolidated.txt
data/Dataset_complete/2016-08-20 - Burnley 2 - 0 Liverpool/: 1_asr.txt  2_asr.txt  n_consolidated.txt
data/Dataset_complete/2016-08-20 - Leicester 0 - 0 Arsenal/: 2_asr.txt  n_consolidated.txt
data/Dataset_complete/2016-08-27 - Tottenham 1 - 1 Liverpool/: 1_asr.txt  n_consolidated.txt
data/Dataset_complete/2016-09-10 - Arsenal 2 - 1 Southampton/: 1_asr.txt  2_asr.txt  n_consolidated.txt
data/Dataset_complete/2016-09-16 - Chelsea 1 - 2 Liverpool/: 1_asr.txt  2_asr.txt  n_consolidated.txt
data/Dataset_complete/2016-09-17 - Hull City 1 - 4 Arsenal/: 1_asr.txt  2_asr.txt  n_consolidated.txt
data/Dataset_complete/2016-09-24 - Arsenal 3 - 0 Chelsea/: 1_asr.txt  2_asr.txt  n_consolidated.txt
data/Dataset_complete/2016-09-24 - Manchester United 4 - 1 Leicester/: 1_asr.txt  (+2 more)
data/prompts/: complex.txt  default.txt  literal.txt
data/results/: sn-agent-results.ods
src/app/: sn-app.py
src/data/: eda_processing.py  post_processing.py  pre_processing.py  pre_processing_complete.py
src/evaluation/: metrics_gols.py
src/model/: gemini_query.py  ollama_query.py  openai_query.py
src/results/: final_game_score.py  goals_name_club_time_type.py
(+165 files in other folders)
